<resources>
    <string name="app_name">FirstAppCalculator</string>
    <string name="cleanAll">c</string>
    <string name="Zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="equal">=</string>
    <string name="multi">*</string>
    <string name="divi">/</string>
    <string name="subs">-</string>
    <string name="add">+</string>
    <string name="back">back</string>

</resources>
