<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/ResultText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textView_height"
        android:textSize="@dimen/text_size"
        android:gravity="start"
        android:paddingLeft="@dimen/textView_padding_left_top"
        android:paddingTop="@dimen/textView_padding_left_top"
        android:singleLine="false"
        />
    <TextView
        android:id="@+id/WholeText"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textView_height"
        android:textSize="@dimen/text_size"
        android:gravity="start"
        android:textColor="@android:color/darker_gray"
        android:paddingLeft="@dimen/textView_padding_left_top"
        android:paddingTop="@dimen/textView_padding_left_top"
        android:singleLine="false"
        />
    <TextView
        android:id="@+id/clearBySubstring"
        android:layout_width="@dimen/back_width"
        android:layout_height="@dimen/back_height"
        android:layout_marginRight="@dimen/back_marginRight"
        android:gravity="center"
        android:textSize="@dimen/text_size"
        android:text="@string/back"
        android:layout_gravity="end"
        android:textColor="@android:color/darker_gray"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="4"
            android:rowCount="1"
            >
            <Button
                style="@style/MathOperations"
                android:id="@+id/btn_add"
                android:gravity="center"
                android:paddingLeft="@dimen/add_btn_padding_left"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/add"

                />
            <Button
                style="@style/MathOperations"
                android:id="@+id/btn_subs"
                android:gravity="center"
                android:paddingLeft="@dimen/btn_padding_left_right"
                android:layout_row="0"
                android:layout_column="1"
                android:text="@string/subs"
                />
            <Button
                style="@style/MathOperations"
                android:id="@+id/btn_multi"
                android:gravity="center"
                android:paddingRight="@dimen/btn_padding_left_right"
                android:layout_row="0"
                android:layout_column="2"
                android:text="@string/multi"
                />
            <Button
                style="@style/MathOperations"
                android:id="@+id/btn_divi"
                android:gravity="center"
                android:paddingRight="@dimen/div_btn_padding_right"
                android:layout_row="0"
                android:layout_column="3"
                android:text="@string/divi"
                />

        </GridLayout>
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="5"
            android:columnCount="3"
            >
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_7"
                android:layout_column="0"
                android:layout_row="0"
                android:text="@string/seven"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_8"
                android:layout_column="1"
                android:layout_row="0"
                android:text="@string/eight"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_9"
                android:layout_column="2"
                android:layout_row="0"
                android:text="@string/nine"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_4"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/four"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_5"
                android:layout_column="1"
                android:layout_row="1"
                android:text="@string/five"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_6"
                android:layout_column="2"
                android:layout_row="1"
                android:text="@string/six"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_1"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/one"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_2"
                android:layout_column="1"
                android:layout_row="2"
                android:text="@string/two"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_3"
                android:layout_column="2"
                android:layout_row="2"
                android:text="@string/three"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_C"
                android:textColor="@color/colorAccent"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/cleanAll"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_0"
                android:layout_column="1"
                android:layout_row="3"
                android:text="@string/Zero"
                />
            <Button
                style="@style/Numbers"
                android:id="@+id/btn_equal"
                android:textColor="@color/colorPrimary"
                android:layout_column="2"
                android:layout_row="3"
                android:text="@string/equal"
                />
        </GridLayout>
    </LinearLayout>
</LinearLayout>
